@@ -386,6 +386,7 @@ GEN     Fp_elldivpol(GEN a4, GEN a6, long n, GEN p);
 GEN     Fp_ellgens(GEN a4, GEN a6, GEN ch, GEN D, GEN m, GEN p);
 GEN     Fp_ellgroup(GEN a4, GEN a6, GEN N, GEN p, GEN *pt_m);
 GEN     Fp_ellj(GEN a4, GEN a6, GEN p);
+int     Fp_elljissupersingular(GEN j, GEN p);
 GEN     Fp_ffellcard(GEN a4, GEN a6, GEN q, long n, GEN p);
 GEN     FpE_add(GEN P, GEN Q, GEN a4, GEN p);
 GEN     FpE_changepoint(GEN x, GEN ch, GEN p);
@@ -404,6 +405,7 @@ GEN     FpXQ_elldivpol(GEN a4, GEN a6, long n, GEN T, GEN p);
 GEN     FpXQ_ellgens(GEN a4, GEN a6, GEN ch, GEN D, GEN m, GEN T, GEN p);
 GEN     FpXQ_ellgroup(GEN a4, GEN a6, GEN N, GEN T, GEN p, GEN *pt_m);
 GEN     FpXQ_ellj(GEN a4, GEN a6, GEN T, GEN p);
+int     FpXQ_elljissupersingular(GEN j, GEN T, GEN p);
 GEN     FpXQE_add(GEN P, GEN Q, GEN a4, GEN T, GEN p);
 GEN     FpXQE_changepoint(GEN x, GEN ch, GEN T, GEN p);
 GEN     FpXQE_changepointinv(GEN x, GEN ch, GEN T, GEN p);
@@ -2153,6 +2155,8 @@ GEN     ellheightmatrix(GEN E, GEN x, long n);
 GEN     ellheightoo(GEN e, GEN z, long prec);
 GEN     ellinit(GEN x, GEN p, long prec);
 GEN     ellisoncurve(GEN e, GEN z);
+int     ellissupersingular(GEN x, GEN p);
+int     elljissupersingular(GEN x);
 GEN     elllseries(GEN e, GEN s, GEN A, long prec);
 GEN     elllocalred(GEN e, GEN p1);
 GEN     elllog(GEN e, GEN a, GEN g, GEN o);
